# ghdash

./: Cargo.toml  README.md  config.sample.yaml
src/: config.rs  github.rs  main.rs
